175		Can set EU3 options via configuration.txt
176		Make a bunch of province conversion things configurable
177		Don't bother mapping wastelands to wastelands
178		Map CK2 religions to CK2 religion groups
179		Map CK2 cultures to CK2 culture groups, then disallow wrong culture buildings
180		Use basetax and manpower proxies to try to break ties in religion conversion
181		Default output filename is again output.eu3
182		Update credits in readme.txt
183		Update religions in converter mod
184		Country religion set
185		Country primary culture set
186		Convert capitals
187		Convert accepted cultures
188		Update religion icons to work correctly
189		Update credits in readme.txt
190		Initial work on government conversion
191		Convert tech group
192		Hordes that become Christian can get non-horde government types
193		Minor logging adjustments
194		Remove titles that have neither de facto nor de jure lieges or vassals.
195		Update automated tests.
196		Log total number of titles.
197		Added a bunch of fixed country outputs.
198		Added daimyo system.
		Fixed bug with importing country history.
199		Tamnius' culture suggestions
200		Add Scotland1399_10_16 save
201		More culture rule updates
202		Change Scotland test save from rar to zip
203		Starting stability and investment
204		Estimate taxation
205		Estimate tolls
206		Determine if provinces are on the same continent as the owner's capital
207		Determine if provinces are land connected to capital
208		Taxes and tolls take into account distance overseas
209		Estimate production income
210		Estimate gold income
211		Fix for gold income estimate
212		ROTW Tech levels (European ones are completely wrong)
213		Change economy option defaults to historical
214		1.06 saves don't lose muslim buildings when converted by a 1.07 install
215		Apply change 213 to test configs
216		Convert tech
217		Tech investment
218		Add miaphysite religion mapping
219		No longer need the mod in place to avoid crashing